--- a/index.html
+++ b/index.html
@@ -318,15 +318,16 @@
             <div class="resume-item">
               <h4>Senior Full Stack Developer</h4>
               <h5>2020 - 2024</h5>
-              <p><em>Allure Security Technology, Waltham, United States</em></p>
+              <p><em>Clarifai, Washington, United States</em></p>
               <ul>
-                <li>Developed a comprehensive web application using <strong>Django, React.js</strong>and <strong>PostgreSQL</strong>, addressing foster care system challenges.</li>
-                <li>Created a Slack chatbot with <strong>Node.js</strong> and <strong>Slack API</strong> to automate employee updates, enhancing workplace connectivity.</li>
-                <li>Implemented a dynamic bulk order feature using <strong>.NET Razor Pages</strong> and <strong>jQuery</strong>, improving legacy inventory management.</li>
-                <li>Built a feedback aggregation app with <strong>Django</strong> and <strong>Angular</strong>, featuring a custom form builder and advanced user hierarchy.</li>
-                <li>Upgraded marketing agency software with <strong>Laravel and Vue.js</strong>, adding demographic reports and optimizing data exchange.</li>
+                <li>Developed a comprehensive web application using <strong>Django, React.js</strong>, and <strong>PostgreSQL</strong>, addressing foster care system challenges by connecting churches, families, and volunteers.</li>
+                <li>Created a Slack chatbot with <strong>Node.js</strong> and <strong>Slack API</strong> to automate employee updates, fostering a more connected and informed workplace environment.</li>
+                <li>Built an AI model for analyzing Dental and MRI images for the healthcare industry using <strong>Python, TensorFlow</strong>, and <strong>OpenCV</strong>.</li>
+                <li>Developed a virtual assistant for S4NetQuest to provide MPACT learning using <strong>Synthesia, Python, GPT-4</strong>, and <strong>Microsoft Azure AI Service</strong>.</li>
+                <li>Built a feedback aggregation app with <strong>Django</strong> and <strong>Angular</strong>, featuring a custom form builder and advanced user hierarchy, completed in just two months.</li>
+                <li>Upgraded marketing agency software with <strong>Laravel</strong> and <strong>Vue.js</strong>, adding demographic reports and optimizing data exchange.</li>
                 <li>Integrated telco virtual assistant data into <strong>HumanFirst Studio</strong>, enabling automatic and structured data uploads.</li>
-                <li>Developed a <strong>Generative AI</strong> chatbot using <strong>GPT-4</strong> and <strong>LOFT</strong>, creating personalized greeting cards for BloomsyBox.</li>
+                <li>Developed a <strong>Generative AI</strong> chatbot using <strong>GPT-4</strong> and <strong>LOFT</strong>, creating personalized greeting cards for BloomsyBox.</li><div class="tech-icons">
                 <div class="tech-icons">
                   <p><strong>Technology:</strong></p>
                   <img src="https://img.icons8.com/color/48/000000/python.png" alt="Python" title="Python">
